popravljena struktura projekta

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming store</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
       rel='stylesheet'>
     <link rel="stylesheet"
@@ -48,7 +48,7 @@
       <div class="pocetne-slike">
 
         <div class="slika">
-          <img src="pocetna-slika1.jpg" alt="">
+          <img src="images/pocetna-slika1.jpg" alt="">
           <div class="text-slike">
             <h1>Gaming PC </h1>
 
@@ -57,7 +57,7 @@
 
         <div class="slika">
           <a href="Gaming PC.html">
-            <img src="pocetna-slika2.jpg" alt="">
+            <img src="images/pocetna-slika2.jpg" alt="">
           </a>
 
           <div class="text-slike">
@@ -66,28 +66,28 @@
         </div>
 
         <div class="slika">
-          <img src="pocetna-slika3.jpg" alt="">
+          <img src="images/pocetna-slika3.jpg" alt="">
           <div class="text-slike">
             <h1>Monitori</h1>
           </div>
         </div>
 
         <div class="slika">
-          <img src="pocetna-slika4.jpg" alt="">
+          <img src="images/pocetna-slika4.jpg" alt="">
           <div class="text-slike">
             <h1>Komponente</h1>
           </div>
         </div>
 
         <div class="slika">
-          <img src="pocetna-slika5.jpg" alt="">
+          <img src="images/pocetna-slika5.jpg" alt="">
           <div class="text-slike">
             <h1>Periferije</h1>
           </div>
         </div>
 
         <div class="slika">
-          <img src="pocetna-slika6.jpg" alt="">
+          <img src="images/pocetna-slika6.jpg" alt="">
           <div class="text-slike">
             <h1>Konzole</h1>
           </div>
