--- a/GamingPC.html
+++ b/GamingPC.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming PC</title>
     <link rel="stylesheet" href="styles/style.css">
-
-
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div class="menu_bar">
@@ -33,6 +35,8 @@
     </div>
 
 
+
+
     <div class="div_opcije">
 
 
@@ -46,6 +50,56 @@
         <div class="velicina-boxa"></div>
       </div>
     </div>
+
+    <div class="paragraf">
+      <p>342342l4kl24234</p>
+    </div>
+
+
+
+
+
+
+
+    <footer>
+      <div class="footer-content">
+        <div class="social">
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+        </div>
+        <ul class="list">
+          <li>
+            <a href="#">GamingPC</a>
+          </li>
+
+          <li>
+            <a href="#">Laptopi</a>
+          </li>
+
+          <li>
+            <a href="#">Monitori</a>
+          </li>
+
+          <li>
+            <a href="#">Komponente</a>
+          </li>
+
+          <li>
+            <a href="#">Periferije</a>
+          </li>
+
+          <li>
+            <a href="#">Konzole</a>
+          </li>
+          <li>
+            <a href="#">Kontakt</a>
+          </li>
+        </ul>
+        <p class="copyright">copyright© 2022 Ahmed</p>
+      </div>
+    </footer>
 
 
   </body>
