--- a/Index.html
+++ b/Index.html
@@ -100,16 +100,15 @@
 
 
     <div class="kontent">
-      <p style="height: 1000px;">Lorem ipsum dolor sit, amet consectetur
-        adipisicing elit. Quae, quidem,
+      <p>Lorem ipsum dolor sit, amet
+        consecteturadipisicing elit. Quae, quidem,
         cum temporibus odit nulla sequi culpa veritatis libero quod soluta
         repudia dasdasdandae ducimus, vel labore doloribus quasi autem porro
-        reiciendis
-        magnam!</p>
+        reiciendismagnam!</p>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis voluptas
         nihil id te sdaasdnetur amet veniam qui similique! Animi tempore,
-        laboriosam
-        tenetur temporibus suscipit nostrum ducimus accusantium assumenda aut
+        laboriosamtenetur temporibus suscipit nostrum ducimus accusantium
+        assumenda aut
         laborum delectus!</p>
 
     </div>
@@ -127,7 +126,7 @@
         </div>
         <ul class="list">
           <li>
-            <a href="#">Gaming PC</a>
+            <a href="#">GamingPC</a>
           </li>
 
           <li>
