--- a/GamingPC.html
+++ b/GamingPC.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming PC</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style-menu.css">
+    <link rel="stylesheet" href="styles/style-box.css">
+    <link rel="stylesheet" href="styles/style-kontakt.css">
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -37,12 +39,15 @@
 
 
 
-    <div class="div_opcije">
+    <div class="div_opcije" style="border:1px solid red">
 
 
-      <div class="box1">
+      <div class="box1" style="border:1px solid blue">
         <div class="velicina-boxa">
-          <a href=""></a>
+          <img
+            src="/images/amd-ryzen-72700x-am4-protsessor-ryzen-riazan-riazhenka-kukur.jpg"
+            alt="">
+
         </div>
       </div>
 
