--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming store</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style-menu.css">
+    <link rel="stylesheet" href="styles/style-box.css">
+    <link rel="stylesheet" href="styles/style-kontakt.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
       rel='stylesheet'>
+    <link rel="stylesheet" href="styles/style-mainbox.css">
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -45,7 +48,7 @@
 
     <div class="div_slike">
 
-      <div class="pocetne-slike">
+      <div class="pocetne-slike" style="border:2px solid red">
 
         <div class="slika">
           <img src="images/pocetna-slika1.jpg" alt="">
