--- a/Laptopi.html
+++ b/Laptopi.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lapotpi</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style-menu.css">
   </head>
   <body>
 
@@ -43,7 +43,9 @@
 
       <div class="box1">
         <div class="velicina-boxa">
-          <a href=""></a>
+
+
+
         </div>
       </div>
 
@@ -53,13 +55,13 @@
 
       <div class="box1">
         <div class="velicina-boxa">
-          <a href=""></a>
+
         </div>
       </div>
 
       <div class="box1">
         <div class="velicina-boxa">
-          <a href=""></a>
+
         </div>
       </div>
 
