--- a/GamingPC.html
+++ b/GamingPC.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/style-menu.css">
     <link rel="stylesheet" href="styles/style-box.css">
     <link rel="stylesheet" href="styles/style-kontakt.css">
+    <link rel="stylesheet" href="styles/style-footer.css">
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -39,10 +40,10 @@
 
 
 
-    <div class="div_opcije" style="border:1px solid red">
+    <div class="div_box">
 
 
-      <div class="box1" style="border:1px solid blue">
+      <div class="box-gaming">
         <div class="velicina-boxa">
           <img
             src="/images/amd-ryzen-72700x-am4-protsessor-ryzen-riazan-riazhenka-kukur.jpg"
@@ -51,17 +52,12 @@
         </div>
       </div>
 
-      <div class="box2">
-        <div class="velicina-boxa"></div>
+      <div class="box-gaming">
+        <div class="velicina-boxa">
+          <img src="/images/wp7320446.jpg" alt="">
+        </div>
       </div>
     </div>
-
-
-
-
-
-
-
 
 
     <footer>
