--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
       rel='stylesheet'>
     <link rel="stylesheet" href="styles/style-mainbox.css">
+    <link rel="stylesheet" href="styles/style-footer.css">
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -38,7 +39,7 @@
         </ul>
         <div class="action">
           <div class="searchBox">
-            <a href="#"><i class='bx bx-search'></i></a>
+            <a href="Index.html"><i class='bx bx-search'></i></a>
             <input type="text" placeholder="Search">
           </div>
         </div>
@@ -48,7 +49,7 @@
 
     <div class="div_slike">
 
-      <div class="pocetne-slike" style="border:2px solid red">
+      <div class="pocetne-slike">
 
         <div class="slika">
           <img src="images/pocetna-slika1.jpg" alt="">
