--- a/Komponente.html
+++ b/Komponente.html
@@ -6,8 +6,139 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Komponente</title>
     <link rel="stylesheet" href="styles/style-menu.css">
+    <link rel="stylesheet" href="styles/style-footer.css">
+    <link rel="stylesheet" href="styles/style-box.css">
+
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
+
+    <div class="menu_bar">
+      <header>
+        <a href="Index.html" class="logo">Gaming store</a>
+        <ul class="navigacijska-traka">
+          <li><a href="Index.html">Home</a></li>
+          <li><a href="GamingPC.html">Gaming PC</a></li>
+          <li><a href="Laptopi.html">Laptopi</a></li>
+          <li><a href="Monitori.html">Monitori</a></li>
+          <li><a href="Komponente.html">Komponente</a></li>
+          <li><a href="Periferije.html">Periferije</a></li>
+          <li><a href="Konzole.html">Konzole</a></li>
+          <li><a href="Kontakt.html">Kontakt</a></li>
+        </ul>
+        <div class="action">
+          <div class="searchBox">
+            <a href="#"><i class='bx bx-search'></i></a>
+            <input type="text" placeholder="Search">
+          </div>
+        </div>
+      </header>
+    </div>
+
+    <div class="div_box">
+
+
+      <div class="box-komponente">
+        <div>
+          <img
+            src="/images//procesor.jpg"
+            alt="">
+
+        </div>
+      </div>
+
+      <div class="box-komponente">
+        <div>
+          <img src="/images/maticna ploca.webp" alt="">
+        </div>
+      </div>
+
+      <div class="box-komponente">
+        <div>
+          <img src="/images/graficka.webp" alt="">
+        </div>
+      </div>
+
+      <div class="box-komponente">
+        <div>
+          <img src="/images/ram.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="box-komponente">
+        <div>
+          <img src="/images/ssd.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="box-komponente">
+        <div>
+          <img src="/images/hdd.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="box-komponente">
+        <div>
+          <img src="/images/napojna.webp" alt="">
+        </div>
+      </div>
+
+      <div class="box-komponente">
+        <div>
+          <img src="/images/cooler.jpg" alt="">
+        </div>
+      </div>
+
+    </div>
+
+
+
+
+
+    <footer>
+      <div class="footer-content">
+        <div class="social">
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+        </div>
+        <ul class="list">
+          <li>
+            <a href="#">GamingPC</a>
+          </li>
+
+          <li>
+            <a href="#">Laptopi</a>
+          </li>
+
+          <li>
+            <a href="#">Monitori</a>
+          </li>
+
+          <li>
+            <a href="#">Komponente</a>
+          </li>
+
+          <li>
+            <a href="#">Periferije</a>
+          </li>
+
+          <li>
+            <a href="#">Konzole</a>
+          </li>
+          <li>
+            <a href="#">Kontakt</a>
+          </li>
+        </ul>
+        <p class="copyright">copyright© 2022 Ahmed</p>
+      </div>
+    </footer>
+
+
 
   </body>
 </html>
