--- a/Laptopi.html
+++ b/Laptopi.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lapotpi</title>
     <link rel="stylesheet" href="styles/style-menu.css">
+    <link rel="stylesheet" href="styles/style-box.css">
+    <link rel="stylesheet" href="styles/style-footer.css">
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
 
@@ -38,34 +44,81 @@
 
 
 
-    <div class="div_opcije">
+    <div class="div_box">
 
 
-      <div class="box1">
+      <div class="box-laptop">
         <div class="velicina-boxa">
-
-
+          <img
+            src="/images/acer.webp"
+            alt="">
 
         </div>
       </div>
 
-      <div class="box2">
-        <div class="velicina-boxa"></div>
-      </div>
-
-      <div class="box1">
+      <div class="box-laptop">
         <div class="velicina-boxa">
-
+          <img src="/images/asus.jpg" alt="">
         </div>
       </div>
 
-      <div class="box1">
+      <div class="box-laptop">
         <div class="velicina-boxa">
+          <img src="/images/apple.jpg" alt="">
+        </div>
 
+      </div>
+      <div class="box-laptop">
+        <div class="velicina-boxa">
+          <img src="/images/del.jpg" alt="">
         </div>
       </div>
-
     </div>
+
+    <footer>
+      <div class="footer-content">
+        <div class="social">
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+        </div>
+        <ul class="list">
+          <li>
+            <a href="#">GamingPC</a>
+          </li>
+
+          <li>
+            <a href="#">Laptopi</a>
+          </li>
+
+          <li>
+            <a href="#">Monitori</a>
+          </li>
+
+          <li>
+            <a href="#">Komponente</a>
+          </li>
+
+          <li>
+            <a href="#">Periferije</a>
+          </li>
+
+          <li>
+            <a href="#">Konzole</a>
+          </li>
+          <li>
+            <a href="#">Kontakt</a>
+          </li>
+        </ul>
+        <p class="copyright">copyright© 2022 Ahmed</p>
+      </div>
+    </footer>
+
+
+
+
+
 
 
   </body>
