--- a/GamingPC.html
+++ b/GamingPC.html
@@ -15,6 +15,7 @@
       crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
+
     <div class="menu_bar">
       <header>
         <a href="Index.html" class="logo">Gaming store</a>
@@ -44,19 +45,28 @@
 
 
       <div class="box-gaming">
-        <div class="velicina-boxa">
-          <img
+
+        <a href="ryzen-pc.html"><img
             src="/images/amd-ryzen-72700x-am4-protsessor-ryzen-riazan-riazhenka-kukur.jpg"
             alt="">
 
+        </a>
+        <div class="text-boxa">
+          <h2>Ryzen</h2>
         </div>
+
+
       </div>
 
       <div class="box-gaming">
-        <div class="velicina-boxa">
+        <a href="intel-pc.html">
+
           <img src="/images/wp7320446.jpg" alt="">
-        </div>
+        </a>
+
       </div>
+
+
     </div>
 
 
