--- a/Komponente.html
+++ b/Komponente.html
@@ -43,52 +43,68 @@
 
       <div class="box-komponente">
         <div>
-          <img
-            src="/images//procesor.jpg"
-            alt="">
+          <a href="procesor.html">
+            <img
+              src="/images/cpu1.webp"
+              alt="">
+          </a>
 
         </div>
       </div>
 
       <div class="box-komponente">
         <div>
-          <img src="/images/maticna ploca.webp" alt="">
+          <a href="maticna ploca.html">
+            <img src="/images/maticna ploca.webp" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-komponente">
         <div>
-          <img src="/images/graficka.webp" alt="">
+          <a href="graficka kartica.html">
+            <img src="/images/graficka.webp" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-komponente">
         <div>
-          <img src="/images/ram.jpg" alt="">
+          <a href="ram memorija.html">
+            <img src="/images/ram.jpg" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-komponente">
         <div>
-          <img src="/images/ssd.jpg" alt="">
+          <a href="ssd.html">
+            <img src="/images/ssd.jpg" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-komponente">
         <div>
-          <img src="/images/hdd.jpg" alt="">
+          <a href="hdd.html">
+            <img src="/images/hdd.jpg" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-komponente">
         <div>
-          <img src="/images/napojna.webp" alt="">
+          <a href="napojna.html">
+            <img src="/images/napojna.webp" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-komponente">
         <div>
-          <img src="/images/cooler.jpg" alt="">
+          <a href="cooler.html">
+            <img src="/images/cooler.jpg" alt="">
+          </a>
         </div>
       </div>
 
