--- a/Laptopi.html
+++ b/Laptopi.html
@@ -49,30 +49,48 @@
 
       <div class="box-laptop">
         <div class="velicina-boxa">
-          <img
-            src="/images/acer.webp"
-            alt="">
+          <a href="acer-laptop.html">
+            <img
+              src="/images/acer.webp"
+              alt="">
+          </a>
 
         </div>
       </div>
 
       <div class="box-laptop">
         <div class="velicina-boxa">
-          <img src="/images/asus.jpg" alt="">
+          <a href="asus-laptop.html">
+            <img src="/images/asus.jpg" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-laptop">
         <div class="velicina-boxa">
-          <img src="/images/apple.jpg" alt="">
+          <a href="apple-laptop.html">
+            <img src="/images/apple.jpg" alt="">
+          </a>
         </div>
 
       </div>
+
       <div class="box-laptop">
         <div class="velicina-boxa">
-          <img src="/images/del.jpg" alt="">
+          <a href="dell-laptop.html">
+            <img src="/images/del.jpg" alt="">
+          </a>
         </div>
       </div>
+
+      <div class="box-laptop">
+        <div class="velicina-boxa">
+          <a href="lenovo-laptop.html">
+            <img src="/images/lenovo.jpg" alt="">
+          </a>
+        </div>
+      </div>
+
     </div>
 
     <footer>
