--- a/Monitori.html
+++ b/Monitori.html
@@ -42,28 +42,44 @@
 
       <div class="box-monitor">
         <div class="velicina-boxa">
-          <img
-            src="/images/acer-monitor.jpg"
-            alt="">
+          <a href="acer-monitor.html">
+            <img
+              src="/images/acer-monitor.jpg"
+              alt="">
+          </a>
 
         </div>
       </div>
 
       <div class="box-monitor">
         <div class="velicina-boxa">
-          <img src="/images/asus-monitor.jpg" alt="">
+          <a href="asus-monitor.html">
+            <img src="/images/asus-monitor.jpg" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-monitor">
         <div class="velicina-boxa">
-          <img src="/images/samsung-monitor.jpg" alt="">
+          <a href="samsung-monitor.html">
+            <img src="/images/samsung-monitor.jpg" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-monitor">
         <div class="velicina-boxa">
-          <img src="/images/msi-monitor.jpg" alt="">
+          <a href="msi-monitor.html">
+            <img src="/images/msi-monitor.jpg" alt="">
+          </a>
+        </div>
+      </div>
+
+      <div class="box-monitor">
+        <div class="velicina-boxa">
+          <a href="dell-monitor.html">
+            <img src="/images/dell.jpg" alt="">
+          </a>
         </div>
       </div>
 
