--- a/Index.html
+++ b/Index.html
@@ -52,50 +52,67 @@
       <div class="pocetne-slike">
 
         <div class="slika">
-          <img src="images/pocetna-slika1.jpg" alt="">
-          <div class="text-slike">
-            <h1>Gaming PC </h1>
+          <a href="GamingPC.html" style="text-decoration: none;">
 
-          </div>
+            <img src="images/pocetna-slika1.jpg" alt="">
+
+            <div class="text-slike">
+              <h1>Gaming PC </h1>
+
+            </div></a>
         </div>
 
         <div class="slika">
-          <a href="Gaming PC.html">
+          <a href="Laptopi.html" style="text-decoration: none;">
             <img src="images/pocetna-slika2.jpg" alt="">
+
+            <div class="text-slike">
+              <h1>Laptopi</h1>
+            </div>
           </a>
-
-          <div class="text-slike">
-            <h1>Laptopi</h1>
-          </div>
         </div>
 
         <div class="slika">
-          <img src="images/pocetna-slika3.jpg" alt="">
-          <div class="text-slike">
-            <h1>Monitori</h1>
-          </div>
+          <a href="Monitori.html" style="text-decoration: none;">
+            <img src="images/pocetna-slika3.jpg" alt="">
+
+            <div class="text-slike">
+              <h1>Monitori</h1>
+            </div>
+          </a>
         </div>
 
         <div class="slika">
-          <img src="images/pocetna-slika4.jpg" alt="">
-          <div class="text-slike">
-            <h1>Komponente</h1>
-          </div>
+          <a href="Komponente.html" style="text-decoration: none;">
+            <img src="images/pocetna-slika4.jpg" alt="">
+
+            <div class="text-slike">
+              <h1>Komponente</h1>
+            </div>
+          </a>
         </div>
 
         <div class="slika">
-          <img src="images/pocetna-slika5.jpg" alt="">
-          <div class="text-slike">
-            <h1>Periferije</h1>
-          </div>
+
+          <a href="Periferije.html" style="text-decoration: none;">
+            <img src="images/pocetna-slika5.jpg" alt="">
+
+            <div class="text-slike">
+              <h1>Periferije</h1>
+            </div>
+          </a>
         </div>
 
         <div class="slika">
-          <img src="images/pocetna-slika6.jpg" alt="">
-          <div class="text-slike">
-            <h1>Konzole</h1>
-          </div>
+          <a href="Konzole.html" style="text-decoration: none;">
+            <img src="images/pocetna-slika6.jpg" alt="">
+
+            <div class="text-slike">
+              <h1>Konzole</h1>
+            </div>
+          </a>
         </div>
+
       </div>
 
     </div>
@@ -130,30 +147,30 @@
         </div>
         <ul class="list">
           <li>
-            <a href="#">GamingPC</a>
+            <a href="GamingPC.html">GamingPC</a>
           </li>
 
           <li>
-            <a href="#">Laptopi</a>
+            <a href="Laptopi.html">Laptopi</a>
           </li>
 
           <li>
-            <a href="#">Monitori</a>
+            <a href="Monitori.html">Monitori</a>
           </li>
 
           <li>
-            <a href="#">Komponente</a>
+            <a href="Komponente.html">Komponente</a>
           </li>
 
           <li>
-            <a href="#">Periferije</a>
+            <a href="Periferije.html">Periferije</a>
           </li>
 
           <li>
-            <a href="#">Konzole</a>
+            <a href="Konzole.html">Konzole</a>
           </li>
           <li>
-            <a href="#">Kontakt</a>
+            <a href="Kontakt.html">Kontakt</a>
           </li>
         </ul>
         <p class="copyright">copyright© 2022 Ahmed</p>
