--- a/Konzole.html
+++ b/Konzole.html
@@ -43,28 +43,36 @@
 
       <div class="box-konzole">
         <div class="velicina-boxa">
-          <img
-            src="/images/ps4.jpg"
-            alt="">
+          <a href="ps4.html">
+            <img
+              src="/images/ps4.jpg"
+              alt="">
+          </a>
 
         </div>
       </div>
 
       <div class="box-konzole">
         <div class="velicina-boxa">
-          <img src="/images/ps5.webp" alt="">
+          <a href="ps5.html">
+            <img src="/images/ps5.webp" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-konzole">
         <div class="velicina-boxa">
-          <img src="/images//xbox.jpg" alt="">
+          <a href="xbox.html">
+            <img src="/images//xbox.jpg" alt="">
+          </a>
         </div>
 
       </div>
       <div class="box-konzole">
         <div class="velicina-boxa">
-          <img src="/images/nitendo.jpg" alt="">
+          <a href="nitendo.html">
+            <img src="/images/nitendo.jpg" alt="">
+          </a>
         </div>
       </div>
     </div>
