--- a/Periferije.html
+++ b/Periferije.html
@@ -42,52 +42,68 @@
 
       <div class="box-periferije">
         <div class="velicina-boxa">
-          <img
-            src="/images/mis.jpg"
-            alt="">
+          <a href="miš.html">
+            <img
+              src="/images/mis.jpg"
+              alt="">
+          </a>
 
         </div>
       </div>
 
       <div class="box-periferije">
         <div class="velicina-boxa">
-          <img src="/images/tastatura.jpg" alt="">
+          <a href="tastatura.html">
+            <img src="/images/tastatura.jpg" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-periferije">
         <div class="velicina-boxa">
-          <img src="/images/slusalice.jpg" alt="">
+          <a href="slusalice.html">
+            <img src="/images/slusalice.jpg" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-periferije">
         <div class="velicina-boxa">
-          <img src="/images/zvucnik.jpg" alt="">
+          <a href="zvucnik.html">
+            <img src="/images/zvucnik.jpg" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-periferije">
         <div class="velicina-boxa">
-          <img src="/images/mic.jpg" alt="">
+          <a href="mikrofon.html">
+            <img src="/images/mic.jpg" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-periferije">
         <div class="velicina-boxa">
-          <img src="/images/web kamera.webp" alt="">
+          <a href="web kamera.html">
+            <img src="/images/web kamera.webp" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-periferije">
         <div class="velicina-boxa">
-          <img src="/images/externa memorija.jpg" alt="">
+          <a href="externa memorija.html">
+            <img src="/images/externa memorija.jpg" alt="">
+          </a>
         </div>
       </div>
 
       <div class="box-periferije">
         <div class="velicina-boxa">
-          <img src="/images/mrezna oprema.webp" alt="">
+          <a href="mrezna oprema.html">
+            <img src="/images/mrezna oprema.webp" alt="">
+          </a>
         </div>
       </div>
 
