--- a/intel-pc.html
+++ b/intel-pc.html
@@ -49,7 +49,7 @@
     <div class="product-container">
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen1.jpg" alt="">
+        <img src="/images/intel pc/intel1.jpg" alt="">
         <h2>Skytech Shadow Gaming Pc</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
@@ -68,7 +68,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen2.jpg" alt="">
+        <img src="/images/intel pc/intel2.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
@@ -86,7 +86,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen3.jpg" alt="">
+        <img src="/images/intel pc/intell3.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
@@ -104,7 +104,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen4.jpg" alt="">
+        <img src="/images/intel pc/intel4.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
@@ -122,7 +122,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen5.jpg" alt="">
+        <img src="/images/intel pc/intel5.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
@@ -140,7 +140,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen1.jpg" alt="">
+        <img src="/images/intel pc/intel6.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
