--- a/acer-laptop.html
+++ b/acer-laptop.html
@@ -48,7 +48,7 @@
     <div class="product-container">
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen1.jpg" alt="">
+        <img src="/images/acer laptop/acerlaptop1.jpg" alt="">
         <h2>Skytech Shadow Gaming Pc</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
@@ -67,7 +67,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen2.jpg" alt="">
+        <img src="/images/acer laptop/acerlaptop2.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
@@ -85,7 +85,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen3.jpg" alt="">
+        <img src="/images/acer laptop/acerlaptop3.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
@@ -103,7 +103,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen4.jpg" alt="">
+        <img src="/images/acer laptop/acerlaptop4.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
@@ -121,7 +121,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen5.jpg" alt="">
+        <img src="/images/acer laptop/acerlaptop5.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
@@ -139,7 +139,7 @@
       </div>
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen1.jpg" alt="">
+        <img src="/images/acer laptop/acerlaptop6.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
