--- a/ps4.html
+++ b/ps4.html
@@ -48,7 +48,7 @@
     <div class="product-container">
 
       <div class="product-box">
-        <img src="/images/ryzen pc/ryzen1.jpg" alt="">
+        <img src="/images/ps4/ps44.jpg" alt="">
         <h2>Skytech Shadow Gaming Pc</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
           Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
